# apello

./: .gitignore  apello-livekit.ipynb  mosaic-agent.txt
demo_pipecat/: README.md  ecosystem.config.js  requirements.txt
demo_pipecat/ai_interviewer/: bot.py  prompt.py
demo_pipecat/apello_dpc/: pyvenv.cfg
demo_pipecat/mosaic/: bot.py  prompt.py
encrypted-websocket-1vdnak/: agent.py  mosaic_prompt.py  pyproject.toml
mosaic_livekit/: mosaic_prompt.py  pyproject.toml  single_simple.py
polyglot-instance-13oeur/: ecosystem.config.cjs
polyglot-instance-13oeur/src/: agent.ts  mosaic-agent.ts
quickstart/: aura.py  demo.py  ecosystem.config.js  main.py  mosaic_prompt.py
